gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail22054.d
version https://git-lfs.github.com/spec/v1
oid sha256:f0d64ba36336db13210f7c8cf954cfc3c4517cdfd466039d3952ff584a3f0343
size 748
